<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/languageSelectorToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

            <TextView
                    android:id="@+id/textViewLangSource"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/text_language_selector" />

            <ImageButton
                    android:id="@+id/buttonSwap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/ic_compare_arrows_black_24dp" />

            <TextView
                    android:id="@+id/textViewLangTarget"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/text_language_selector" />

        </LinearLayout>

        <!--input panel-->
        <include
                layout="@layout/text_input_panel"
                android:id="@+id/textInputPanel" />
        <!--/input panel-->

        <!--internet connection error-->
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/internetConnectionError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:visibility="gone"
                tools:visibility="visible">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_language_selector"
                    android:text="@string/error_internet_connection" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@string/error_check_internet" />

            <Button
                    android:id="@+id/buttonTryAgain"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/error_button_try_again" />
        </LinearLayout>
        <!--/internet connection error-->

        <!--translate-->
        <TextView
                android:id="@+id/textViewTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="@dimen/text_translate"
                android:scrollbars="vertical" />
        <!--/translate-->

    </LinearLayout>

    <TextView
            android:id="@+id/textViewLink"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_ml"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:textSize="16sp"
            android:gravity="end" />

    <TextView
            android:layout_above="@id/textViewLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_ml_title"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:textSize="16sp"
            android:gravity="end" />

</RelativeLayout>